--- a/templates/index.html
+++ b/templates/index.html
@@ -26,9 +26,12 @@
       frame.</p>
 
     <ul class="nav nav-tabs role=" tablist">
-      <li class="nav-item"><a class="nav-link" data-toggle="tab" href="#display" role="tab"><i class="fa fa-wrench fa-2x"></i></a></li>
-      <li class="nav-item"><a class="nav-link" data-toggle="tab" href="#menu2" role="tab"><i class="fa fa-film fa-2x"></i></a></li>
-      <li class="nav-item"><a class="nav-link" data-toggle="tab" href="#menu3" role="tab"><i class="fa fa-plus fa-2x"></i></a></li>
+      <li class="nav-item"><a class="nav-link" data-toggle="tab" href="#display" role="tab"><i
+            class="fa fa-wrench fa-2x"></i></a></li>
+      <li class="nav-item"><a class="nav-link" data-toggle="tab" href="#menu2" role="tab"><i
+            class="fa fa-film fa-2x"></i></a></li>
+      <li class="nav-item"><a class="nav-link" data-toggle="tab" href="#menu3" role="tab"><i
+            class="fa fa-plus fa-2x"></i></a></li>
     </ul>
 
     <div class="tab-content">
@@ -60,50 +63,83 @@
           <input class="form-check-input" type="checkbox" value="" id="videosCheck">
           <label class="form-check-label" for="videosCheck">Videos</label>
         </div>
+
+        <h3>Display mode</h3>
+        <div class="form-check">
+          <input class="form-check-input" type="radio" value="" id="orderRadio">
+          <label class="form-check-label" for="orderRadio">Ordered</label>
+        </div>
+        <div class="form-check">
+          <input class="form-check-input" type="radio" value="" id="randomRadio">
+          <label class="form-check-label" for="randomRadio">Random</label>
+        </div>
+        <div class="form-check">
+          <input class="form-check-input" type="radio" value="" id="staticRadio">
+          <label class="form-check-label" for="staticRadio">Static</label>
+        </div>
       </div>
+
       <div id="menu3" class="tab-pane fade" role="tabpanel">
         <h2>New Content</h2>
-        <h3>Giphy</h3>
-        <p>Add random animations from Giphy.com</p>
-        <form>
-          <div class="form-row">
-            <div class="form-group col-md-6">
-              <label for="giphyNumberOfItems">Number of items</label>
-              <input type="number" class="form-control" id="giphyNumberOfItems" placeholder="5">
+        <div class="container">
+          <div class="row">
+            <div class="col">
+              <h3>Giphy</h3>
+              <p>Add random animations from Giphy.com</p>
+              <form>
+                <div class="form-row">
+                  <div class="form-group col-md-6">
+                    <label for="giphyNumberOfItems">Number of items</label>
+                    <input type="number" class="form-control" id="giphyNumberOfItems" placeholder="5">
+                  </div>
+                  <div class="form-group col-md-6">
+                    <label for="giphyTag">Tag</label>
+                    <input type="text" class="form-control" id="giphyTag" placeholder="pixelart">
+                  </div>
+                  <button type="submit" class="btn btn-primary mb-2">Submit</button>
+                </div>
+              </form>
             </div>
-            <div class="form-group col-md-6">
-              <label for="giphyTag">Tag</label>
-              <input type="text" class="form-control" id="giphyTag" placeholder="pixelart">
+            <div class="col">
+              <h3>YouTube</h3>
+              <p>Add a new video from YouTube.com</p>
+              <form>
+                <div class="form-group">
+                  <label for="addYouTube">YouTube video url</label>
+                  <input type="text" class="form-control" id="addYouTube"
+                    placeholder="https://www.youtube.com/watch?v=dQw4w9WgXcQ">
+                </div>
+                <button type="button" id="youtube-submit" class="btn btn-primary mb-2">Submit</button>
+              </form>
             </div>
-            <button type="submit" class="btn btn-primary mb-2">Submit</button>
-          </div>
-        </form>
-        <h3>YouTube</h3>
-        <form>
-          <div class="form-group">
-            <label for="addYouTube">Add a new YouTube video</label>
-            <input type="text" class="form-control" id="addYouTube"
-              placeholder="https://www.youtube.com/watch?v=dQw4w9WgXcQ">
-          </div>
-          <button type="button" id="youtube-submit" class="btn btn-primary mb-2">Submit</button>
-        </form>
-        <h3>Videos</h3>
-        <form>
-          <div class="form-group">
-            <label for="uploadVideoForm">Upload a video to the frame</label>
-            <input type="file" class="form-control-file" id="uploadVideoForm">
-          </div>
-          <button type="submit" class="btn btn-primary mb-2">Upload</button>
-        </form>
-        <h3>Images</h3>
-        <form>
-          <div class="form-group">
-            <label for="uploadImageForm">Upload an image to the frame</label>
-            <input type="file" class="form-control-file" id="uploadImageForm">
-          </div>
-          <button type="submit" class="btn btn-primary mb-2">Upload</button>
-        </form>
-      </div>
+          </div> <!-- END first row-->
+          <div class="row">
+            <div class="col">
+              <h3>Videos</h3>
+              <form>
+                <div class="form-group">
+                  <label for="uploadVideoForm">Upload a video to the frame</label>
+                  <input type="file" class="form-control-file" id="uploadVideoForm">
+                </div>
+                <button type="submit" class="btn btn-primary mb-2">Upload</button>
+              </form>
+            </div>
+            <div class="col">
+              <h3>Images</h3>
+              <form>
+                <div class="form-group">
+                  <label for="uploadImageForm">Upload an image to the frame</label>
+                  <input type="file" class="form-control-file" id="uploadImageForm">
+                </div>
+                <button type="submit" class="btn btn-primary mb-2">Upload</button>
+              </form>
+            </div>
+
+          </div> <!-- END second row-->
+        </div> <!-- END content grid-->
+      </div> <!-- END add content tab-->
+
+
     </div>
   </div>
 
