--- a/templates/index.html
+++ b/templates/index.html
@@ -90,13 +90,13 @@
                 <div class="form-row">
                   <div class="form-group col-md-6">
                     <label for="giphyNumberOfItems">Number of items</label>
-                    <input type="number" class="form-control" id="giphyNumberOfItems" placeholder="5">
+                    <input type="number" class="form-control" id="giphyCount" placeholder="5">
                   </div>
                   <div class="form-group col-md-6">
                     <label for="giphyTag">Tag</label>
                     <input type="text" class="form-control" id="giphyTag" placeholder="pixelart">
                   </div>
-                  <button type="submit" class="btn btn-primary mb-2">Submit</button>
+                  <button type="button" id="giphy-submit" class="btn btn-primary mb-2">Submit</button>
                 </div>
               </form>
             </div>
