--- a/templates/index.html
+++ b/templates/index.html
@@ -50,6 +50,19 @@
 
       <div id="menu2" class="tab-pane fade" role="tabpanel">
         <h2>Sources</h2>
+
+        <h3>Slideshow Controls</h3>
+        <form id="command-form">
+          <button type="button" id="slideshow-play" class="btn btn-primary mb-2"><i
+            class="fa fa-play fa-4x"></i></button>
+            <button type="button" id="slideshow-pause" class="btn btn-primary mb-2"><i
+              class="fa fa-pause fa-4x"></i></button>
+          <button type="button" id="slideshow-previous" class="btn btn-primary mb-2"><i
+            class="fa fa-backward fa-4x"></i></button>
+          <button type="button" id="slideshow-next" class="btn btn-primary mb-2"><i
+            class="fa fa-forward fa-4x"></i></button>
+        </form>
+
         <h3>Enable content</h3>
         <p>Select which content that is allowed to be visible.</p>
         <form>
