Simplifed command handling - Retrieve the source type from the element - No need for additional checks in the javascript

--- a/templates/index.html
+++ b/templates/index.html
@@ -53,13 +53,13 @@
 
         <h3>Slideshow Controls</h3>
         <form id="command-form">
-          <button type="button" id="slideshow-play" class="btn btn-primary mb-2"><i
+          <button type="button" id="slideshow-play" data-id="play" class="btn btn-primary mb-2"><i
             class="fa fa-play fa-4x"></i></button>
-            <button type="button" id="slideshow-pause" class="btn btn-primary mb-2"><i
+          <button type="button" id="slideshow-pause" data-id="pause"  class="btn btn-primary mb-2"><i
               class="fa fa-pause fa-4x"></i></button>
-          <button type="button" id="slideshow-previous" class="btn btn-primary mb-2"><i
+          <button type="button" id="slideshow-previous" data-id="previous" class="btn btn-primary mb-2"><i
             class="fa fa-backward fa-4x"></i></button>
-          <button type="button" id="slideshow-next" class="btn btn-primary mb-2"><i
+          <button type="button" id="slideshow-next"  data-id="next" class="btn btn-primary mb-2"><i
             class="fa fa-forward fa-4x"></i></button>
         </form>
 
