--- a/templates/index.html
+++ b/templates/index.html
@@ -17,6 +17,9 @@
     integrity="sha384-w+8Gqjk9Cuo6XH9HKHG5t5I1VR4YBNdPt/29vwgfZR485eoEJZ8rJRbm3TR32P6k" crossorigin="anonymous">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.0/umd/popper.min.js"></script>
+  <link href="https://cdn.jsdelivr.net/gh/gitbrent/bootstrap4-toggle@3.5.0/css/bootstrap4-toggle.min.css"
+    rel="stylesheet">
+  <script src="https://cdn.jsdelivr.net/gh/gitbrent/bootstrap4-toggle@3.5.0/js/bootstrap4-toggle.min.js"></script>
 </head>
 
 <body>
@@ -65,43 +68,31 @@
 
         <h3>Enable content</h3>
         <p>Select which content that is allowed to be visible.</p>
-        <form>
-          <div class="custom-control custom-checkbox">
-            <input class="custom-control-input" type="checkbox" value="" id="imagesCheck">
-            <label class="custom-control-label" for="imagesCheck">Images</label>
+
+        <form id="allowance-form">
+          <div class="form-check pl-0">
+            <input class="form-check-input" type="checkbox" id="imagesToggle" data-id="images" data-toggle="toggle" data-on="Images" data-off="Images" data-offstyle="danger" data-width="150" data-size="lg">
           </div>
-          <div class="custom-control custom-checkbox">
-            <input class="custom-control-input" type="checkbox" value="" id="animationsCheck">
-            <label class="custom-control-label" for="animationsCheck">Animations</label>
+          <br>
+          <div class="form-check pl-0">
+            <input class="form-check-input" type="checkbox" id="animationsToggle" data-id="animations" data-toggle="toggle" data-on="Animations" data-off="Animations" data-offstyle="danger" data-width="150" data-size="lg">
           </div>
-          <div class="custom-control custom-checkbox">
-            <input class="custom-control-input" type="checkbox" value="" id="videosCheck">
-            <label class="custom-control-label" for="videosCheck">Videos</label>
+          <br>
+          <div class="form-check pl-0">
+            <input class="form-check-input" type="checkbox" id="videosToggle" data-id="videos" data-toggle="toggle" data-on="Videos" data-off="Videos" data-offstyle="danger" data-width="150" data-size="lg">
           </div>
-          <div class="custom-control custom-checkbox">
-            <input class="custom-control-input" type="checkbox" value="" id="giphyCheck">
-            <label class="custom-control-label" for="giphyCheck">Giphy</label>
+          <br>
+          <div class="form-check pl-0">
+            <input class="form-check-input" type="checkbox" id="giphyToggle" data-id="giphy" data-toggle="toggle" data-on="Giphy" data-off="Giphy" data-offstyle="danger" data-width="150" data-size="lg">
           </div>
-          <div class="custom-control custom-checkbox">
-            <input class="custom-control-input" type="checkbox" value="" id="youtubeCheck">
-            <label class="custom-control-label" for="youtubeCheck">YouTube</label>
+          <br>
+          <div class="form-check pl-0">
+            <input class="form-check-input" type="checkbox" id="youtubeToggle" data-id="youtube" data-toggle="toggle" data-on="YouTube" data-off="YouTube" data-offstyle="danger" data-width="150" data-size="lg">
           </div>
-          <button type="button" id="enable-content-submit" class="btn btn-primary mb-2">Update filter</button>
         </form>
 
         <h3>Display mode</h3>
-        <div class="form-check">
-          <input class="form-check-input" type="radio" value="" id="orderRadio">
-          <label class="form-check-label" for="orderRadio">Ordered</label>
-        </div>
-        <div class="form-check">
-          <input class="form-check-input" type="radio" value="" id="randomRadio">
-          <label class="form-check-label" for="randomRadio">Random</label>
-        </div>
-        <div class="form-check">
-          <input class="form-check-input" type="radio" value="" id="staticRadio">
-          <label class="form-check-label" for="staticRadio">Static</label>
-        </div>
+        <p>TODO...</p>
       </div>
 
       <div id="menu3" class="tab-pane fade" role="tabpanel">
