--- a/templates/index.html
+++ b/templates/index.html
@@ -52,44 +52,55 @@
       </div>
 
       <div id="menu2" class="tab-pane fade" role="tabpanel">
-        <h2>Sources</h2>
-
-        <h3>Slideshow Controls</h3>
-        <form id="command-form">
-          <button type="button" id="slideshow-play" data-id="play" class="btn btn-primary mb-2"><i
-            class="fa fa-play fa-4x"></i></button>
-          <button type="button" id="slideshow-pause" data-id="pause"  class="btn btn-primary mb-2"><i
-              class="fa fa-pause fa-4x"></i></button>
-          <button type="button" id="slideshow-previous" data-id="previous" class="btn btn-primary mb-2"><i
-            class="fa fa-backward fa-4x"></i></button>
-          <button type="button" id="slideshow-next"  data-id="next" class="btn btn-primary mb-2"><i
-            class="fa fa-forward fa-4x"></i></button>
-        </form>
-
-        <h3>Enable content</h3>
-        <p>Select which content that is allowed to be visible.</p>
-
-        <form id="allowance-form">
-          <div class="form-check pl-0">
-            <input class="form-check-input" type="checkbox" id="imagesToggle" data-id="images" data-toggle="toggle" data-on="Images" data-off="Images" data-offstyle="danger" data-width="150" data-size="lg">
+        <h2>Slideshow</h2>
+        <div class="row">
+          <div class="col">
+            <h3>Controls</h3>
+            <form id="command-form">
+              <div class="btn-group btn-group-justified">
+                <button type="button" id="slideshow-play" data-id="play" class="btn btn-primary"><i
+                    class="fa fa-play fa-4x"></i></button>
+                <button type="button" id="slideshow-pause" data-id="pause" class="btn btn-primary"><i
+                    class="fa fa-pause fa-4x"></i></button>
+                <button type="button" id="slideshow-previous" data-id="previous" class="btn btn-primary"><i
+                    class="fa fa-backward fa-4x"></i></button>
+                <button type="button" id="slideshow-next" data-id="next" class="btn btn-primary"><i
+                    class="fa fa-forward fa-4x"></i></button>
+              </div>
+            </form>
           </div>
-          <br>
-          <div class="form-check pl-0">
-            <input class="form-check-input" type="checkbox" id="animationsToggle" data-id="animations" data-toggle="toggle" data-on="Animations" data-off="Animations" data-offstyle="danger" data-width="150" data-size="lg">
+          <div class="col">
+            <h3>Content</h3>
+            <form id="allowance-form">
+              <div class="form-check pl-0">
+                <input class="form-check-input" type="checkbox" id="imagesToggle" data-id="images" data-toggle="toggle"
+                  data-on="Images" data-off="Images" data-offstyle="danger" data-width="150" data-size="lg">
+              </div>
+              <br>
+              <div class="form-check pl-0">
+                <input class="form-check-input" type="checkbox" id="animationsToggle" data-id="animations"
+                  data-toggle="toggle" data-on="Animations" data-off="Animations" data-offstyle="danger"
+                  data-width="150" data-size="lg">
+              </div>
+              <br>
+              <div class="form-check pl-0">
+                <input class="form-check-input" type="checkbox" id="videosToggle" data-id="videos" data-toggle="toggle"
+                  data-on="Videos" data-off="Videos" data-offstyle="danger" data-width="150" data-size="lg">
+              </div>
+              <br>
+              <div class="form-check pl-0">
+                <input class="form-check-input" type="checkbox" id="giphyToggle" data-id="giphy" data-toggle="toggle"
+                  data-on="Giphy" data-off="Giphy" data-offstyle="danger" data-width="150" data-size="lg">
+              </div>
+              <br>
+              <div class="form-check pl-0">
+                <input class="form-check-input" type="checkbox" id="youtubeToggle" data-id="youtube"
+                  data-toggle="toggle" data-on="YouTube" data-off="YouTube" data-offstyle="danger" data-width="150"
+                  data-size="lg">
+              </div>
+            </form>
           </div>
-          <br>
-          <div class="form-check pl-0">
-            <input class="form-check-input" type="checkbox" id="videosToggle" data-id="videos" data-toggle="toggle" data-on="Videos" data-off="Videos" data-offstyle="danger" data-width="150" data-size="lg">
-          </div>
-          <br>
-          <div class="form-check pl-0">
-            <input class="form-check-input" type="checkbox" id="giphyToggle" data-id="giphy" data-toggle="toggle" data-on="Giphy" data-off="Giphy" data-offstyle="danger" data-width="150" data-size="lg">
-          </div>
-          <br>
-          <div class="form-check pl-0">
-            <input class="form-check-input" type="checkbox" id="youtubeToggle" data-id="youtube" data-toggle="toggle" data-on="YouTube" data-off="YouTube" data-offstyle="danger" data-width="150" data-size="lg">
-          </div>
-        </form>
+        </div>
 
         <h3>Display mode</h3>
         <p>TODO...</p>
