--- a/templates/index.html
+++ b/templates/index.html
@@ -20,6 +20,7 @@
   <link href="https://cdn.jsdelivr.net/gh/gitbrent/bootstrap4-toggle@3.5.0/css/bootstrap4-toggle.min.css"
     rel="stylesheet">
   <script src="https://cdn.jsdelivr.net/gh/gitbrent/bootstrap4-toggle@3.5.0/js/bootstrap4-toggle.min.js"></script>
+  <link rel="stylesheet" href="{{ url_for('static', filename='custom.css') }}">
 </head>
 
 <body>
@@ -41,13 +42,11 @@
       <div id="display" class="tab-pane fade" role="tabpanel">
         <h2>Display</h2>
         <p>Information regarding the used display and adjustment of display settings.</p>
+        <h3>Brightness</h3>
         <form id="brightness-form">
           <div class="form-group">
-            <label for="displayBrightness">Brightness <i class="fa fa-sun-o"></i></label>
-            <input type="range" min="0.0" max="1.0" step="0.02" value="0.5" class="custom-range" id="displayBrightness"
-              placeholder="pixelart" name="level">
+            <input type="range" min="0.0" max="1.0" step="0.02" value="0.5" class="custom-range" id="displayBrightness" name="level">
           </div>
-          <button type="button" class="btn btn-primary mb-2" id="brightness-submit">Update brightness</button>
         </form>
       </div>
 
