Slideshow length slider
Set how long each source should be displayed through the UI
* Minimum 1 second. Maximum 60 seconds

--- a/server/templates/index.html
+++ b/server/templates/index.html
@@ -100,6 +100,12 @@
                             </form>
                         </div>
                     </div>
+                    <h3>Slideshow Length</h3>
+                    <form id="slideshow-length-form">
+                        <div class="form-group">
+                            <input type="range" min="1" max="60" step="1" value="10" class="custom-range" id="slideshowLength" name="length">
+                        </div>
+                    </form>
 
                     <h3>Refresh Content</h3>
                     <form id="refresh-form">
