--- a/server/templates/index.html
+++ b/server/templates/index.html
@@ -163,12 +163,12 @@
                             </div>
                             <div class="col">
                                 <h3>Images</h3>
-                                <form>
+                                <form enctype="multipart/form-data" id="uploadImageForm">
                                     <div class="form-group">
                                         <label for="uploadImageForm">Upload an image to the frame</label>
-                                        <input type="file" class="form-control-file" id="uploadImageForm">
+                                        <input type="file" name=file class="form-control-file" id="uploadImageFormInput">
                                     </div>
-                                    <button type="submit" class="btn btn-primary mb-2">Upload</button>
+                                    <button type="submit" id="upload-image-submit" class="btn btn-primary mb-2">Upload</button>
                                 </form>
                             </div>
 
